Refactor of Mappers and DTOs

--- a/userservice/src/main/resources/application.properties
+++ b/userservice/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 spring.application.name=userservice
+
+spring.docker.compose.enabled=true
+spring.docker.compose.file=compose.dev.yaml
+
+server.port=8080
+
+spring.datasource.url=jdbc:postgresql://postgres:5432/test_userdb
+spring.datasource.username=myuser
+spring.datasource.password=secret
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.default_schema=users
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+
+spring.profiles.active=dev
+
+spring.neo4j.security.hostname-verification-enabled=false
+
+spring.security.user.name=admin
+spring.security.user.password=admin
+spring.security.user.roles=ADMIN
+
+eureka.client.enabled=false
