--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -2,7 +2,7 @@ services:
   postgres:
     image: 'postgres:latest'
     environment:
-      - 'POSTGRES_DB=mydatabase'
+      - 'POSTGRES_DB=test_userdb'
       - 'POSTGRES_PASSWORD=secret'
       - 'POSTGRES_USER=myuser'
     ports:
@@ -21,6 +21,6 @@ services:
       - 'PGADMIN_DEFAULT_EMAIL=admin@example.com'
       - 'PGADMIN_DEFAULT_PASSWORD=admin'
     ports:
-        - '5050:80'
+      - '5050:80'
     depends_on:
       - postgres
