Add tests for EnergyMeter use cases and update entities

--- a/devicecatalog/src/main/resources/application.properties
+++ b/devicecatalog/src/main/resources/application.properties
@@ -1,1 +1,26 @@
 spring.application.name=devicecatalog
+
+spring.docker.compose.enabled=true
+spring.docker.compose.file=compose.dev.yaml
+
+server.port=8088
+
+spring.datasource.url=jdbc:postgresql://postgres:49204/test_devicecatalogdb
+spring.datasource.username=myuser
+spring.datasource.password=secret
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.default_schema=users
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.id.new_generator_mappings=true
+spring.jpa.open-in-view=false
+
+spring.profiles.active=dev
+
+spring.neo4j.security.hostname-verification-enabled=false
+
+spring.security.user.name=admin
+spring.security.user.password=admin
+spring.security.user.roles=ADMIN
+
+eureka.client.enabled=false
