--- a/userservice/src/test/resources/test-application.properties
+++ b/userservice/src/test/resources/test-application.properties
@@ -1,17 +1,17 @@
-spring.application.name=userservice
+spring.application.name=devicecatalog
 
 spring.docker.compose.enabled=true
 spring.docker.compose.file=compose.dev.yaml
 
 server.port=8080
 
-spring.datasource.url=jdbc:h2:file:./data/testdb
+spring.datasource.url=jdbc:h2:file:./data/testdevicecatalogdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.enabled=true
 
-spring.jpa.properties.hibernate.default_schema=users
+spring.jpa.properties.hibernate.default_schema=devicecatalog
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.open-in-view=false
 
