Refactored mappers and entities; reconfigured properties files for optimization and consistency

--- a/userservice/src/main/resources/application.properties
+++ b/userservice/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.docker.compose.file=compose.dev.yaml
 
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://postgres:49204/test_userdb
+spring.datasource.url=jdbc:postgresql://postgres:55532/test_db
 spring.datasource.username=myuser
 spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
