--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -2,11 +2,11 @@ services:
   postgres:
     image: 'postgres:latest'
     environment:
-      - 'POSTGRES_DB=test_userdb'
+      - 'POSTGRES_DB=test_db'
       - 'POSTGRES_PASSWORD=secret'
       - 'POSTGRES_USER=myuser'
     ports:
-      - '5432:5432'
+      - '55532:5432'
   rabbitmq:
     image: 'rabbitmq:3-management'
     environment:
