--- a/devicecatalog/src/main/resources/application.properties
+++ b/devicecatalog/src/main/resources/application.properties
@@ -5,15 +5,18 @@ spring.docker.compose.file=compose.dev.yaml
 
 server.port=8088
 
-spring.datasource.url=jdbc:postgresql://postgres:49204/test_devicecatalogdb
+spring.datasource.url=jdbc:postgresql://postgres:55532/test_db
 spring.datasource.username=myuser
 spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.properties.hibernate.default_schema=users
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.default_schema=devices
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
 spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 
 spring.profiles.active=dev
 
