--- a/devicecatalog/src/test/resources/test-application.properties
+++ b/devicecatalog/src/test/resources/test-application.properties
@@ -1,17 +1,17 @@
 spring.application.name=devicecatalog
 
 spring.docker.compose.enabled=true
-spring.docker.compose.file=compose.dev.yaml
+spring.docker.compose.file=compose.test.yaml
 
 server.port=8080
 
-spring.datasource.url=jdbc:h2:file:./data/test_devicecatalogdb
+spring.datasource.url=jdbc:h2:file:./data/test_db
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.enabled=true
 
-spring.jpa.properties.hibernate.default_schema=users
+spring.jpa.properties.hibernate.default_schema=devices
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
 spring.jpa.open-in-view=false
