Refactor Entities, Mappers and DTOs of DeviceCatalog

--- a/userservice/.gitignore
+++ b/userservice/.gitignore
@@ -32,6 +32,10 @@ build/
 ### VS Code ###
 .vscode/
 
+# Docker Compose files
+compose.dev.yaml
+compose.prod.yaml
+
 ### Energy Track Project ###
 /userservice/data/testdb.trace.db
 .env
