--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ build/
 # Docker Compose files
 compose.dev.yaml
 compose.prod.yaml
+
+### Energy Track Project ###
+/userservice/data/testdb.trace.db
+.env
+*.env
