--- a/devicecatalog/.gitignore
+++ b/devicecatalog/.gitignore
@@ -31,3 +31,12 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Docker Compose files
+compose.dev.yaml
+compose.prod.yaml
+
+### Energy Track Project ###
+/userservice/data/testdb.trace.db
+.env
+*.env
