--- a/devicecatalog/src/main/resources/application.properties
+++ b/devicecatalog/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.properties.hibernate.default_schema=devices
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
 spring.jpa.open-in-view=false
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 
