feat(datacollector): implement and refactor hexagonal architecture with RabbitMQ integration

--- a/datacollector/src/main/resources/application.properties
+++ b/datacollector/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 spring.application.name=datacollector
+
+spring.docker.compose.enabled=false
+
+spring.profiles.active=dev
+
+eureka.client.enabled=false
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=myuser
+spring.rabbitmq.password=secret
+
+rabbitmq.queue.consumptions=energy-consumptions-queue
+rabbitmq.exchange.consumptions=energy-consumptions-exchange
+rabbitmq.routing.key.consumptions=energy-consumptions-routing-key
+
+rabbitmq.queue.meteringpoints=energy-meteringpoints-queue
+rabbitmq.exchange.meteringpoints=energy-meteringpoints-exchange
+rabbitmq.routing.key.meteringpoints=energy-meteringpoints-routing-key
+
+spring.jackson.serialization.write-dates-as-timestamps=false
+
+# Ruta de los archivos de configuración
+external.config.path=H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\datacollector\\src\\main\\config\\config.ini
