Implement functionality for consumption queries by MeteringPointId and IntervalType, including updates to models, ports, adapters, use cases, application and test configurations, mappers, entities, repositories, and schema.sql changes.

--- a/consumptionservice/src/main/resources/application.properties
+++ b/consumptionservice/src/main/resources/application.properties
@@ -1,11 +1,36 @@
 spring.application.name=consumptionservice
 
-spring.docker.compose.enabled=false
+spring.docker.compose.enabled=true
+spring.docker.compose.file=compose.dev.yaml
+
+server.port=8088
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/test_db
+spring.datasource.username=myuser
+spring.datasource.password=secret
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.default_schema=consumptions
+spring.jpa.properties.hibernate.id.new_generator_mappings=true
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.sql.init.mode=always
 
 spring.profiles.active=dev
 
+spring.neo4j.security.hostname-verification-enabled=false
+
+spring.security.user.name=admin
+spring.security.user.password=admin
+spring.security.user.roles=ADMIN
+
 eureka.client.enabled=false
 
+
+### Spring RabbitMQ Configuration ###
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=myuser
@@ -15,12 +40,12 @@ rabbitmq.queue.consumptions=energy-consumptions-queue
 rabbitmq.exchange.consumptions=energy-consumptions-exchange
 rabbitmq.routing.key.consumptions=energy-consumptions-routing-key
 
-rabbitmq.queue.meteringpoints=energy-meteringpoints-queue
-rabbitmq.exchange.meteringpoints=energy-meteringpoints-exchange
-rabbitmq.routing.key.meteringpoints=energy-meteringpoints-routing-key
+rabbitmq.queue.meteringpoints=energy-newmeteringpoint-queue
+rabbitmq.exchange.meteringpoints=energy-newmeteringpoint-exchange
+rabbitmq.routing.key.meteringpoints=energy-newmeteringpoint-routing-key
 
 spring.jackson.serialization.write-dates-as-timestamps=false
 
-# Ruta de los archivos de configuración
+### File Configuration Path ###
 external.config.path=H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\datacollector\\src\\main\\config\\config.ini
 
