--- a/devicecatalog/src/main/resources/application.properties
+++ b/devicecatalog/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.open-in-view=false
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 
 spring.profiles.active=dev
 
