Refactor: Updated package structure to align with hexagonal architecture, renamed ports and adapters for better clarity, moved configuration files to appropriate infrastructure packages, and adjusted tests for compliance with architectural rules.

--- a/consumptionservice/src/main/config/config.ini
+++ b/consumptionservice/src/main/config/config.ini
@@ -26,5 +26,5 @@ rabbitmq.routing.key.meteringpoints=energy-meteringpoints-routing-key
 timeserver.host=127.0.0.1
 
 ### JSON File Meteringpoints save location ###
-meteringpoints.jsonfile.save.location =H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\datacollector\\src\\main\\data\\meteringpoints.json
+meteringpoints.jsonfile.save.location =H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\consumptionservice\\src\\main\\data\\meteringpoints.json
 
