--- a/consumptionservice/src/main/resources/application.properties
+++ b/consumptionservice/src/main/resources/application.properties
@@ -40,12 +40,12 @@ rabbitmq.queue.consumptions=energy-consumptions-queue
 rabbitmq.exchange.consumptions=energy-consumptions-exchange
 rabbitmq.routing.key.consumptions=energy-consumptions-routing-key
 
-rabbitmq.queue.meteringpoints=energy-newmeteringpoint-queue
-rabbitmq.exchange.meteringpoints=energy-newmeteringpoint-exchange
-rabbitmq.routing.key.meteringpoints=energy-newmeteringpoint-routing-key
+rabbitmq.queue.new.meteringpoint=energy-newmeteringpoint-queue
+rabbitmq.exchange.new.meteringpoint=energy-newmeteringpoint-exchange
+rabbitmq.routing.key.new.meteringpoint=energy-newmeteringpoint-routing-key
 
 spring.jackson.serialization.write-dates-as-timestamps=false
 
 ### File Configuration Path ###
-external.config.path=H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\datacollector\\src\\main\\config\\config.ini
+external.config.path=H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\consumptionservice\\src\\main\\config\\config.ini
 
