--- a/datacollector/pom.xml
+++ b/datacollector/pom.xml
@@ -50,8 +50,12 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>2.17.2</version>
 		</dependency>
-
-
+		<dependency>
+			<groupId>com.tngtech.archunit</groupId>
+			<artifactId>archunit-junit5</artifactId>
+			<version>1.3.0</version>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- Dependencia con vulnerabilidades -->
 		<dependency>
