Implemented RabbitMQ messaging with proper configuration, improved error handling, added DTOs and mappers for metering points and consumptions, introduced persistence improvements, ensured adherence to hexagonal architecture, and updated application properties and configurations for RabbitMQ and database integration.

--- a/consumptionservice/src/main/resources/application.properties
+++ b/consumptionservice/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=consumptionservice
 spring.docker.compose.enabled=true
 spring.docker.compose.file=compose.dev.yaml
 
-server.port=8088
+server.port=8082
 
 spring.datasource.url=jdbc:postgresql://localhost:5433/test_db
 spring.datasource.username=myuser
@@ -39,6 +39,10 @@ spring.rabbitmq.password=secret
 rabbitmq.queue.consumptions=energy-consumptions-queue
 rabbitmq.exchange.consumptions=energy-consumptions-exchange
 rabbitmq.routing.key.consumptions=energy-consumptions-routing-key
+
+rabbitmq.queue.meteringpoint=energy-meteringpoint-queue
+rabbitmq.exchange.meteringpoint=energy-meteringpoint-exchange
+rabbitmq.routing.key.meteringpoint=energy-meteringpoint-routing-key
 
 rabbitmq.queue.new.meteringpoint=energy-newmeteringpoint-queue
 rabbitmq.exchange.new.meteringpoint=energy-newmeteringpoint-exchange
