--- a/datacollector/src/test/resources/test-application.properties
+++ b/datacollector/src/test/resources/test-application.properties
@@ -4,7 +4,18 @@ server.port=8081
 
 spring.docker.compose.enabled=false
 
-spring.profiles.active=dev
+spring.datasource.url=jdbc:h2:file:./data/test_db
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.h2.console.enabled=true
+
+spring.jpa.properties.hibernate.default_schema=consumptions
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.id.new_generator_mappings=true
+spring.jpa.open-in-view=false
+
+spring.profiles.active=test
 
 eureka.client.enabled=false
 
