--- a/devicecatalog/src/main/resources/application.properties
+++ b/devicecatalog/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=devicecatalog
 spring.docker.compose.enabled=true
 spring.docker.compose.file=compose.dev.yaml
 
-server.port=8088
+server.port=8080
 
-spring.datasource.url=jdbc:postgresql://postgres:5433/test_db
+spring.datasource.url=jdbc:postgresql://localhost:5433/test_db
 spring.datasource.username=myuser
 spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -19,6 +19,17 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.sql.init.mode=never
 
+
+### Spring RabbitMQ Configuration ###
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=myuser
+spring.rabbitmq.password=secret
+
+rabbitmq.queue.new.meteringpoint=energy-newmeteringpoint-queue
+rabbitmq.exchange.new.meteringpoint=energy-newmeteringpoint-exchange
+rabbitmq.routing.key.new.meteringpoint=energy-newmeteringpoint-routing-key
+
 spring.profiles.active=dev
 
 spring.neo4j.security.hostname-verification-enabled=false
@@ -28,3 +39,7 @@ spring.security.user.password=admin
 spring.security.user.roles=ADMIN
 
 eureka.client.enabled=false
+
+# Ruta de los archivos de configuración
+external.config.path=H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\datacollector\\src\\main\\config\\config.ini
+
