--- a/consumptionservice/src/main/config/config.ini
+++ b/consumptionservice/src/main/config/config.ini
@@ -1,9 +1,3 @@
-### TCP Connection ###
-tcp.connection.host= 192.168.0.16
-tcp.connection.port= 3001
-tcp.connection.timeout= 10000
-tcp.connection.reconnect= 10000
-
 ### RabbitMQ Connection ###
 rabbitmq.host=127.0.0.1
 rabbitmq.port=5672
@@ -13,18 +7,18 @@ rabbitmq.password=guest
 ### RabbitMQ Queue ###
 rabbitmq.queue.consumptions=energy-consumptions-queue
 rabbitmq.queue.meteringpoints=energy-meteringpoints-queue
+rabbitmq.queue.new.meteringpoint=energy-newmeteringpoint-queue
 
 ### RabbitMQ Exchange ###
 rabbitmq.exchange.consumptions=energy-consumptions-exchange
 rabbitmq.exchange.meteringpoints=energy-meteringpoints-exchange
+rabbitmq.exchange.new.meteringpoint=energy-newmeteringpoint-exchange
 
 ### RabbitMQ Routing Key ###
 rabbitmq.routing.key.consumptions=energy-consumptions-routing-key
 rabbitmq.routing.key.meteringpoints=energy-meteringpoints-routing-key
+rabbitmq.routing.key.new.meteringpoint=energy-newmeteringpoint-routing-key
 
 ### Time Server ###
 timeserver.host=127.0.0.1
-
-### JSON File Meteringpoints save location ###
-meteringpoints.jsonfile.save.location =H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\consumptionservice\\src\\main\\data\\meteringpoints.json
 
