--- a/userservice/src/main/resources/application.properties
+++ b/userservice/src/main/resources/application.properties
@@ -3,12 +3,15 @@ spring.application.name=userservice
 spring.docker.compose.enabled=true
 spring.docker.compose.file=compose.dev.yaml
 
-server.port=8080
+server.port=8083
 
-spring.datasource.url=jdbc:postgresql://postgres:55532/test_db
+spring.datasource.url=jdbc:postgresql://localhost:5433/test_db
 spring.datasource.username=myuser
 spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+spring.sql.init.mode=always
 
 spring.jpa.properties.hibernate.default_schema=users
 spring.jpa.hibernate.ddl-auto=update
