Implement AuthService and JWTService

--- a/userservice/src/main/resources/application.properties
+++ b/userservice/src/main/resources/application.properties
@@ -26,3 +26,8 @@ spring.security.user.password=admin
 spring.security.user.roles=ADMIN
 
 eureka.client.enabled=false
+
+### JWT Configuration ###
+application.security.jwt.secret-key=secret
+application.security.jwt.expiration-time=86400000
+application.security.jwt.refresh-token.expiration-time=604800000
