--- a/userservice/src/test/resources/test-application.properties
+++ b/userservice/src/test/resources/test-application.properties
@@ -5,16 +5,20 @@ spring.docker.compose.file=compose.test.yaml
 
 server.port=8080
 
-spring.datasource.url=jdbc:h2:file:./data/test_db
-spring.datasource.password=
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.jpa.properties.hibernate.default_schema=users
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 spring.profiles.active=test
+
+spring.main.allow-bean-definition-overriding=true
 
 spring.neo4j.security.hostname-verification-enabled=false
 
@@ -23,3 +27,12 @@ spring.security.user.password=admin
 spring.security.user.roles=ADMIN
 
 eureka.client.enabled=false
+
+
+### JWT Configuration ###
+application.security.jwt.secret-key=secret
+application.security.jwt.expiration-time=86400000
+application.security.jwt.refresh-token.expiration-time=604800000
+
+logging.level.org.springframework.core.env=DEBUG
+logging.level.org.springframework.boot.context.properties=DEBUG
