--- a/userservice/src/main/resources/application.properties
+++ b/userservice/src/main/resources/application.properties
@@ -28,6 +28,6 @@ spring.security.user.roles=ADMIN
 eureka.client.enabled=false
 
 ### JWT Configuration ###
-application.security.jwt.secret-key=secret
+application.security.jwt.secret-key=${JWT_SECRET}
 application.security.jwt.expiration-time=86400000
 application.security.jwt.refresh-token.expiration-time=604800000
