--- a/consumptionservice/src/main/resources/application.properties
+++ b/consumptionservice/src/main/resources/application.properties
@@ -1,55 +1,46 @@
-spring.application.name=consumptionservice
+spring.application.name=${SPRING_APPLICATION_NAME:consumptionservice}
 
-spring.docker.compose.enabled=true
-spring.docker.compose.file=compose.dev.yaml
+server.port=${SERVER_PORT:8082}
 
-server.port=8082
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/test_db
-spring.datasource.username=myuser
-spring.datasource.password=secret
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/test_db}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:myuser}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:secret}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.default_schema=consumptions
+spring.jpa.defer-datasource-initialization=false
+spring.sql.init.mode=always
+spring.sql.init.platform=postgresql
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.default_schema=${SPRING_JPA_SCHEMA:consumptions}
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.sql.init.mode=always
+spring.rabbitmq.host=${SPRING_RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME:myuser}
+spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:secret}
 
-spring.profiles.active=dev
+rabbitmq.queue.consumptions=${RABBITMQ_QUEUE_CONSUMPTIONS:energy-consumptions-queue}
+rabbitmq.exchange.consumptions=${RABBITMQ_EXCHANGE_CONSUMPTIONS:energy-consumptions-exchange}
+rabbitmq.routing.key.consumptions=${RABBITMQ_ROUTING_KEY_CONSUMPTIONS:energy-consumptions-routing-key}
 
-spring.neo4j.security.hostname-verification-enabled=false
+rabbitmq.queue.meteringpoint=${RABBITMQ_QUEUE_METERINGPOINT:energy-meteringpoint-queue}
+rabbitmq.exchange.meteringpoint=${RABBITMQ_EXCHANGE_METERINGPOINT:energy-meteringpoint-exchange}
+rabbitmq.routing.key.meteringpoint=${RABBITMQ_ROUTING_KEY_METERINGPOINT:energy-meteringpoint-routing-key}
 
-spring.security.user.name=admin
-spring.security.user.password=admin
-spring.security.user.roles=ADMIN
-
-eureka.client.enabled=false
-
-
-### Spring RabbitMQ Configuration ###
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=myuser
-spring.rabbitmq.password=secret
-
-rabbitmq.queue.consumptions=energy-consumptions-queue
-rabbitmq.exchange.consumptions=energy-consumptions-exchange
-rabbitmq.routing.key.consumptions=energy-consumptions-routing-key
-
-rabbitmq.queue.meteringpoint=energy-meteringpoint-queue
-rabbitmq.exchange.meteringpoint=energy-meteringpoint-exchange
-rabbitmq.routing.key.meteringpoint=energy-meteringpoint-routing-key
-
-rabbitmq.queue.new.meteringpoint=energy-newmeteringpoint-queue
-rabbitmq.exchange.new.meteringpoint=energy-newmeteringpoint-exchange
-rabbitmq.routing.key.new.meteringpoint=energy-newmeteringpoint-routing-key
+rabbitmq.queue.new.meteringpoint=${RABBITMQ_QUEUE_NEW_METERINGPOINT:energy-newmeteringpoint-queue}
+rabbitmq.exchange.new.meteringpoint=${RABBITMQ_EXCHANGE_NEW_METERINGPOINT:energy-newmeteringpoint-exchange}
+rabbitmq.routing.key.new.meteringpoint=${RABBITMQ_ROUTING_KEY_NEW_METERINGPOINT:energy-newmeteringpoint-routing-key}
 
 spring.jackson.serialization.write-dates-as-timestamps=false
 
-### File Configuration Path ###
-external.config.path=H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\consumptionservice\\src\\main\\config\\config.ini
+spring.security.user.name=${SPRING_SECURITY_USERNAME:admin}
+spring.security.user.password=${SPRING_SECURITY_PASSWORD:admin}
+spring.security.user.roles=${SPRING_SECURITY_ROLES:ADMIN}
 
+external.config.path=${EXTERNAL_CONFIG_PATH:H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\consumptionservice\\src\\main\\config\\config.ini}
