--- a/datacollector/src/main/config/config.ini
+++ b/datacollector/src/main/config/config.ini
@@ -1,30 +1,20 @@
-### TCP Connection ###
+### TCP Connection to Station ###
 tcp.connection.host= 192.168.0.16
 tcp.connection.port= 3001
 tcp.connection.timeout= 10000
 tcp.connection.reconnect= 10000
 
-### RabbitMQ Connection ###
-rabbitmq.host=127.0.0.1
-rabbitmq.port=5672
-rabbitmq.username=guest
-rabbitmq.password=guest
-
 ### RabbitMQ Queue ###
 rabbitmq.queue.consumptions=energy-consumptions-queue
-rabbitmq.queue.meteringpoints=energy-meteringpoints-queue
+rabbitmq.queue.meteringpoint=energy-meteringpoint-queue
 
 ### RabbitMQ Exchange ###
 rabbitmq.exchange.consumptions=energy-consumptions-exchange
-rabbitmq.exchange.meteringpoints=energy-meteringpoints-exchange
+rabbitmq.exchange.meteringpoint=energy-meteringpoint-exchange
 
 ### RabbitMQ Routing Key ###
 rabbitmq.routing.key.consumptions=energy-consumptions-routing-key
-rabbitmq.routing.key.meteringpoints=energy-meteringpoints-routing-key
+rabbitmq.routing.key.meteringpoint=energy-meteringpoint-routing-key
 
 ### Time Server ###
 timeserver.host=127.0.0.1
-
-### JSON File Meteringpoints save location ###
-meteringpoints.jsonfile.save.location =H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\datacollector\\src\\main\\data\\meteringpoints.json
-
