--- a/datacollector/src/main/resources/application.properties
+++ b/datacollector/src/main/resources/application.properties
@@ -1,27 +1,27 @@
-spring.application.name=datacollector
+spring.application.name=${SPRING_APPLICATION_NAME:datacollector}
 
-server.port=8081
+server.port=${SERVER_PORT:8081}
 
 spring.docker.compose.enabled=false
 
-spring.profiles.active=dev
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
-eureka.client.enabled=false
+spring.rabbitmq.host=${SPRING_RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME:myuser}
+spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:secret}
 
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=myuser
-spring.rabbitmq.password=secret
+rabbitmq.queue.consumptions=${RABBITMQ_QUEUE_CONSUMPTIONS:energy-consumptions-queue}
+rabbitmq.exchange.consumptions=${RABBITMQ_EXCHANGE_CONSUMPTIONS:energy-consumptions-exchange}
+rabbitmq.routing.key.consumptions=${RABBITMQ_ROUTING_KEY_CONSUMPTIONS:energy-consumptions-routing-key}
 
-rabbitmq.queue.consumptions=energy-consumptions-queue
-rabbitmq.exchange.consumptions=energy-consumptions-exchange
-rabbitmq.routing.key.consumptions=energy-consumptions-routing-key
-
-rabbitmq.queue.meteringpoints=energy-meteringpoints-queue
-rabbitmq.exchange.meteringpoints=energy-meteringpoints-exchange
-rabbitmq.routing.key.meteringpoints=energy-meteringpoints-routing-key
+rabbitmq.queue.meteringpoint=${RABBITMQ_QUEUE_METERINGPOINT:energy-meteringpoint-queue}
+rabbitmq.exchange.meteringpoint=${RABBITMQ_EXCHANGE_METERINGPOINT:energy-meteringpoint-exchange}
+rabbitmq.routing.key.meteringpoint=${RABBITMQ_ROUTING_KEY_METERINGPOINT:energy-meteringpoint-routing-key}
 
 spring.jackson.serialization.write-dates-as-timestamps=false
 
-# Ruta de los archivos de configuración
-external.config.path=H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\datacollector\\src\\main\\config\\config.ini
+external.config.path=${EXTERNAL_CONFIG_PATH:H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\datacollector\\src\\main\\config\\config.ini}
+external.meteringpoints.jsonfile.save.location=${EXTERNAL_METERINGPOINTS_JSONFILE_SAVE_LOCATION:H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\datacollector\\src\\main\\data\\meteringpoints.json}
+
+simulation.without.stations=${SIMULATION_WITHOUT_STATIONS:true}
