--- a/devicecatalog/src/main/resources/application.properties
+++ b/devicecatalog/src/main/resources/application.properties
@@ -1,45 +1,37 @@
-spring.application.name=devicecatalog
+spring.application.name=${SPRING_APPLICATION_NAME:devicecatalog}
 
-spring.docker.compose.enabled=true
-spring.docker.compose.file=compose.dev.yaml
+server.port=${SERVER_PORT:8080}
 
-server.port=8080
-
-spring.datasource.url=jdbc:postgresql://localhost:5433/test_db
-spring.datasource.username=myuser
-spring.datasource.password=secret
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/test_db}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:myuser}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:secret}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.default_schema=devices
+spring.jpa.defer-datasource-initialization=false
+spring.sql.init.mode=always
+spring.sql.init.platform=postgresql
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.default_schema=${SPRING_JPA_SCHEMA:devices}
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.sql.init.mode=never
+spring.rabbitmq.host=${SPRING_RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME:myuser}
+spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:secret}
 
+rabbitmq.queue.new.meteringpoint=${RABBITMQ_QUEUE_METERINGPOINT:energy-newmeteringpoint-queue}
+rabbitmq.exchange.new.meteringpoint=${RABBITMQ_EXCHANGE_METERINGPOINT:energy-newmeteringpoint-exchange}
+rabbitmq.routing.key.new.meteringpoint=${RABBITMQ_ROUTING_KEY_METERINGPOINT:energy-newmeteringpoint-routing-key}
 
-### Spring RabbitMQ Configuration ###
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=myuser
-spring.rabbitmq.password=secret
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
+spring.docker.compose.enabled=false
 
-rabbitmq.queue.new.meteringpoint=energy-newmeteringpoint-queue
-rabbitmq.exchange.new.meteringpoint=energy-newmeteringpoint-exchange
-rabbitmq.routing.key.new.meteringpoint=energy-newmeteringpoint-routing-key
+spring.security.user.name=${SPRING_SECURITY_USERNAME:admin}
+spring.security.user.password=${SPRING_SECURITY_PASSWORD:admin}
+spring.security.user.roles=${SPRING_SECURITY_ROLES:ADMIN}
 
-spring.profiles.active=dev
-
-spring.neo4j.security.hostname-verification-enabled=false
-
-spring.security.user.name=admin
-spring.security.user.password=admin
-spring.security.user.roles=ADMIN
-
-eureka.client.enabled=false
-
-# Ruta de los archivos de configuración
-external.config.path=H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\datacollector\\src\\main\\config\\config.ini
-
+external.config.path=${EXTERNAL_CONFIG_PATH:H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\devicecatalog\\src\\main\\config\\config.ini}
