--- a/userservice/src/main/resources/application.properties
+++ b/userservice/src/main/resources/application.properties
@@ -1,33 +1,35 @@
-spring.application.name=userservice
+spring.application.name=${SPRING_APPLICATION_NAME:userservice}
 
-spring.docker.compose.enabled=true
-spring.docker.compose.file=compose.dev.yaml
+server.port=${SERVER_PORT:8083}
 
-server.port=8083
-
-spring.datasource.url=jdbc:postgresql://localhost:5433/test_db
-spring.datasource.username=myuser
-spring.datasource.password=secret
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://postgres:5432/test_db}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:myuser}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:secret}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
+spring.jpa.defer-datasource-initialization=false
+spring.batch.jdbc.initialize-schema=always
 spring.sql.init.mode=always
-
-spring.jpa.properties.hibernate.default_schema=users
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.default_schema=${SPRING_JPA_SCHEMA:users}
+spring.jpa.properties.hibernate.id.new_generator_mappings=true
 spring.jpa.open-in-view=false
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
 
-spring.profiles.active=dev
+logging.level.org.hibernate.sql=DEBUG
+logging.level.org.hibernate.tool.hbm2ddl=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
 spring.neo4j.security.hostname-verification-enabled=false
 
-spring.security.user.name=admin
-spring.security.user.password=admin
-spring.security.user.roles=ADMIN
+spring.security.user.name=${SPRING_SECURITY_USERNAME:admin}
+spring.security.user.password=${SPRING_SECURITY_PASSWORD:admin}
+spring.security.user.roles=${SPRING_SECURITY_ROLES:ADMIN}
 
-eureka.client.enabled=false
-
-### JWT Configuration ###
-application.security.jwt.secret-key=${JWT_SECRET}
-application.security.jwt.expiration-time=86400000
-application.security.jwt.refresh-token.expiration-time=604800000
+application.security.jwt.secret-key=${JWT_SECRET:default_secret_key}
+application.security.jwt.expiration-time=${JWT_EXPIRATION_TIME:86400000}
+application.security.jwt.refresh-token.expiration-time=${JWT_REFRESH_EXPIRATION_TIME:604800000}
