--- a/datacollector/src/main/resources/application.properties
+++ b/datacollector/src/main/resources/application.properties
@@ -25,3 +25,4 @@ external.config.path=${EXTERNAL_CONFIG_PATH:H:\\Mi unidad\\UOC\\13oSemestre\\TFG
 external.meteringpoints.jsonfile.save.location=${EXTERNAL_METERINGPOINTS_JSONFILE_SAVE_LOCATION:H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\datacollector\\src\\main\\data\\meteringpoints.json}
 
 simulation.without.stations=${SIMULATION_WITHOUT_STATIONS:true}
+demo.init=${DEMO_INIT:true}
