--- a/devicecatalog/src/main/resources/application.properties
+++ b/devicecatalog/src/main/resources/application.properties
@@ -35,3 +35,5 @@ spring.security.user.password=${SPRING_SECURITY_PASSWORD:admin}
 spring.security.user.roles=${SPRING_SECURITY_ROLES:ADMIN}
 
 external.config.path=${EXTERNAL_CONFIG_PATH:H:\\Mi unidad\\UOC\\13oSemestre\\TFG\\Workspace\\energytracker\\devicecatalog\\src\\main\\config\\config.ini}
+
+demo.init=${DEMO_INIT:true}
