--- a/userservice/src/main/resources/application.properties
+++ b/userservice/src/main/resources/application.properties
@@ -2,11 +2,10 @@ spring.application.name=${SPRING_APPLICATION_NAME:userservice}
 
 server.port=${SERVER_PORT:8083}
 
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://postgres:5432/test_db}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/test_db}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:myuser}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:secret}
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 
 spring.jpa.defer-datasource-initialization=false
 spring.batch.jdbc.initialize-schema=always
@@ -33,3 +32,7 @@ spring.security.user.roles=${SPRING_SECURITY_ROLES:ADMIN}
 application.security.jwt.secret-key=${JWT_SECRET:default_secret_key}
 application.security.jwt.expiration-time=${JWT_EXPIRATION_TIME:86400000}
 application.security.jwt.refresh-token.expiration-time=${JWT_REFRESH_EXPIRATION_TIME:604800000}
+
+demo.init=${DEMO_INIT:true}
+
+spring.docker.compose.enabled=false
