--- a/datacollector/Dockerfile
+++ b/datacollector/Dockerfile
@@ -1,5 +1,7 @@
 FROM openjdk:17-jdk-alpine
 WORKDIR /app
 COPY target/datacollector-0.0.1-SNAPSHOT.jar datacollector.jar
+COPY src/main/data/meteringpoints.json data/meteringpoints.json
+COPY src/main/config/config.ini config/config.ini
 EXPOSE 8081
 ENTRYPOINT ["java", "-jar", "datacollector.jar"]
