--- a/datacollector/src/main/resources/application.properties
+++ b/datacollector/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=${SPRING_APPLICATION_NAME:datacollector}
 
 server.port=${SERVER_PORT:8081}
 
-spring.docker.compose.enabled=false
+spring.docker.compose.enabled=${DOCKER_COMPOSE_ENABLED:false}
 
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
